--- a/style.CSS
+++ b/style.CSS
@@ -13,6 +13,7 @@ img{
 }
 section{
   display: flex;
+  margin-bottom: 150px;
 }
 .half-width{
 width: 50%;
@@ -29,4 +30,10 @@ padding-left: 5%;
 .top-banner{
   background-image: url(images/top-banner.png);
   background-repeat: no-repeat;
+}
+.dream-big{
+  background-image: url(images/dream-bg.png);
+  background-repeat: no-repeat;
+  background-position: right;
+  
 }
