--- a/style.CSS
+++ b/style.CSS
@@ -37,3 +37,26 @@ padding-left: 5%;
   background-position: right;
   
 }
+.experenca-area{
+  background-image:url(images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position:left ;
+}
+.experience-item{
+  width: 30%;
+  margin-left: 5%;
+  margin-right: 5%;
+ padding-left: 20px;
+ border-radius: 10px;
+  box-shadow: 10px 10px 30px gray;
+  
+}
+  #full-stack-developer{
+    border-left:7px solid tomato ;
+  }
+  #baby-developer{
+    border-left: 7px solid blue;
+  }
+  footer p{
+    text-align: center;
+  }
